easily replacible deprecated methods  #2135